--- a/src/resources/HTML/ejs/mark.ejs
+++ b/src/resources/HTML/ejs/mark.ejs
@@ -108,12 +108,12 @@ for (var i = 0; i < global_prac.length; i++) {
                     </a>
                 </td>
                 <%if (!interview) {%>
-                    <!--<td align="center" width="110px">
+                    <td align="center" width="110px">
                         <a href="/?sort=mark_time<%=preurl%>">
                             <% if (global_query['sort'] == "mark_time") {%><span class="glyphicon glyphicon-sort-by-alphabet"></span><%}%>
                             Time
                         </a>
-                    </td>-->
+                    </td>
                     <td align="center" width="110px">
                         <a href="/?sort=marks<%=preurl%>">
                             <% if (global_query['sort'] == "marks") {%><span class="glyphicon glyphicon-sort-by-alphabet"></span><%}%>
@@ -214,9 +214,9 @@ for (var i = 0; i < global_prac.length; i++) {
                     <%=passed%> / <%=tests%>
                 </td>
         <%if (modified && !interview) {%>
-                <!--<td align="center">-->
-                    <!--<%=time%>-->
-                <!--</td>-->
+                <td align="center">
+                    <%=time%>
+                </td>
                 <td align="center">
                     <%=mark%>
                 </td>
