--- a/src/resources/HTML/ejs/edit.ejs
+++ b/src/resources/HTML/ejs/edit.ejs
@@ -9,6 +9,7 @@ var theme     = (typeof global_query['theme'] !== 'undefined') ? global_query['t
     <meta name="description" content="">
     <meta name="author" content="">
     <title>Editing Script</title>
+    <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.0/css/bootstrap-toggle.min.css" rel="stylesheet">
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
