auto marking experiment

--- a/src/resources/HTML/ejs/edit.ejs
+++ b/src/resources/HTML/ejs/edit.ejs
@@ -147,6 +147,19 @@ function childIdentifier(child) {
 // Masters student?
 var script_masters = script_source.indexOf("##### CSSE7030 #####") > -1;
 
+// Helper function
+function jumpExists(jump) {
+    var search = script_source;
+    for (var i = 0; i < jump.length; i++) {
+        var match = new RegExp(jump[i]).exec(search);
+        if (match == null) {
+            return false;
+        }
+        search = search.slice(match.index);
+    }
+    return true;
+}
+
 // Generate the criteria
 function generateChildren(children, savefile, level) {
     if (typeof children === 'undefined') return;
@@ -164,6 +177,7 @@ function generateChildren(children, savefile, level) {
         }
         name = name.replace(/<indent>/g, '');
 
+        var alert       = child['alert'];
         var weight      = child['weight'];
         var subchildren = child['children'];
         var jump        = child['jump'];
@@ -176,9 +190,16 @@ function generateChildren(children, savefile, level) {
         }
 
         // Convert the jump into a usable form
+        var color = "";
         if (typeof jump !== 'undefined') {
+            var jump_exists = jumpExists(jump);
+            if (typeof alert !== 'undefined') {
+                color = ((alert && jump_exists) || (!alert && !jump_exists)) ? "color:red;" : "color:green;";
+            }
+
             jump = JSON.stringify(jump);
         }
+
 
         // Does this child rely on others being ticked?
         if (typeof child['requires'] !== 'undefined' && child['requires'].length > 0) {
@@ -208,9 +229,9 @@ function generateChildren(children, savefile, level) {
                     }
                     %>
                 </td>
-                <%if (typeof jump !== 'undefined') {%>
-                <td class="cell_label" style="padding-left:<%=margin%>"><a href="#" onClick='jumpTo(<%-jump%>)'><%-name%></a></td>
-                <%} else {%>
+                <% if (typeof jump !== 'undefined') {%>
+                <td class="cell_label" style="padding-left:<%=margin%>"><a style="<%=color%>" href="#" onClick='jumpTo(<%-jump%>)'><%-name%></a></td>
+                <% } else {%>
                 <td class="cell_label" style="padding-left:<%=margin%>"><%-name%></td>
                 <%}%>
                 <td><%=weight%></td>
